dev - se agregan enlaces absolutos a assets de plantilla

--- a/templates/template-basic.html
+++ b/templates/template-basic.html
@@ -334,7 +334,7 @@
                     <tr>
                       <td width="600" align="left" valign="top" style="padding: 0;">
                         <p style="margin: 0 0 1rem; font-family: 'Trebuchet MS', sans-serif; mso-font-alt: 'Arial'; font-size: 0.75em; line-height: 1em; color: #161617; text-align: center; mso-style-text-align: center; text-decoration: underline;" class="regularText cl-dark">
-                          <a href="{email.link}" style="font-weight: 400; color: #161617;" class="cl-dark">Ver en la web</a>
+                          <a href="[key.email]" style="font-weight: 400; color: #161617;" class="cl-dark">Ver en la web</a>
                         </p>
                       </td>
                     </tr>
@@ -355,7 +355,7 @@
                       <td width="600" align="center" valign="top">
                         <a href="https://kaipa.pe/">
                           <img
-                            src="../assets/logo-kaipa.png"
+                            src="https://kaipa.pe/email-assets/logo-kaipa.png"
                             width="91" height="" alt="logo KAiPA"
                             style="display: block; margin:0; padding:0; border:none; width: 100%; max-width: 91px; height: auto; border-radius: 0;"
                             border="0" class="img g-img">
@@ -378,7 +378,7 @@
                     <tr>
                       <td width="600" align="center" valign="top">
                         <img
-                          src="../assets/timeline-email.png"
+                          src="https://kaipa.pe/email-assets/timeline-email.png"
                           width="460" height="" alt="timeline"
                           style="display: block; margin:0; padding:0; border:none; width: 100%; max-width: 460px; height: auto; border-radius: 0;"
                           border="0" class="img g-img">
@@ -400,7 +400,7 @@
                     <tr>
                       <td width="600" align="left" valign="top">
                         <img
-                          src="../assets/image-header.png"
+                          src="https://kaipa.pe/email-assets/image-header.png"
                           width="600" height="" alt="banner KAiPA"
                           style="display: block; margin:0; padding:0; border:none; width: 100%; height: auto; border-radius: 25px; background: #fefdfb;"
                           border="0" class="img g-img bg-body">
@@ -422,7 +422,7 @@
                     <tr>
                       <td width="600" align="center" valign="top">
                         <img
-                          src="../assets/title-primary.png"
+                          src="https://kaipa.pe/email-assets/title-primary.png"
                           width="530" height="" alt="El seguro vehicular que siempre trabaja"
                           style="display: block; margin:0; padding:0; border:none; width: 100%; max-width: 530px; height: auto; border-radius: 0; background: #fefdfb;"
                           border="0" class="img g-img bg-body">
@@ -443,7 +443,7 @@
                   <table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0" style="width:100%; font-size: 16px;">
                     <tr>
                       <td width="600" align="left" valign="top" style="padding: 0;">
-                        <p style="margin: 0 0 1.5rem; font-family: 'Trebuchet MS', sans-serif; mso-font-alt: 'Arial'; font-size: 1.56em; line-height: 1.5em; color: #161617; text-align: left; mso-style-text-align: left;" class="regularText cl-dark">Hola {name}, soy Kaipa. <a href="{cotizacion.link}" style="font-weight: 400; color: #FD7825; text-decoration: underline;" class="cl-orange">¡Tu cotización ya está lista!</a></p>
+                        <p style="margin: 0 0 1.5rem; font-family: 'Trebuchet MS', sans-serif; mso-font-alt: 'Arial'; font-size: 1.56em; line-height: 1.5em; color: #161617; text-align: left; mso-style-text-align: left;" class="regularText cl-dark">Hola {name}, soy Kaipa. <a href="[key.quotation]" style="font-weight: 400; color: #FD7825; text-decoration: underline;" class="cl-orange">¡Tu cotización ya está lista!</a></p>
                         <p style="margin: 0 0 1.5rem; font-family: 'Trebuchet MS', sans-serif; mso-font-alt: 'Arial'; font-size: 1.56em; line-height: 1.5em; color: #161617; text-align: left; mso-style-text-align: left;" class="regularText cl-dark">Descubre un seguro donde cada sol que inviertes trabaja de dos maneras:</p>
                         <p style="margin: 0 0 1.5rem; font-family: 'Trebuchet MS', sans-serif; mso-font-alt: 'Arial'; font-size: 1.56em; line-height: 1.5em; color: #161617; text-align: left; mso-style-text-align: left;" class="regularText cl-dark">✅ Te protege a ti y a tu vehículo.</p>
                         <p style="margin: 0 0 1.5rem; font-family: 'Trebuchet MS', sans-serif; mso-font-alt: 'Arial'; font-size: 1.56em; line-height: 1.5em; color: #161617; text-align: left; mso-style-text-align: left;" class="regularText cl-dark">✅ Y aporta en alimentar y educar a niños peruanos vulnerables que han sido víctimas de violencia infantil.</p>
@@ -471,8 +471,8 @@
                     <tr><td height="60" style="font-size:60px; line-height:60px;"></td></tr>
                     <tr>
                       <td width="600" align="center" valign="top">
-                        <a href="{link.prima}">
-                          <img src="../assets/btn-section-prima-value.png" width="361" height="" alt="Botón: Donaremos el 20% de nuestras ganancias"
+                        <a href="[key.value]">
+                          <img src="https://kaipa.pe/email-assets/btn-section-prima-value.png" width="361" height="" alt="Botón: Donaremos el 20% de nuestras ganancias"
                             style="display: block; margin:0; padding:0; border:none; width: 100%; max-width: 361px; height: auto; border-radius: 0; background: #fdfaf7;"
                             border="0" class="img g-img bg-light">
                         </a>
@@ -623,9 +623,9 @@
                   <table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0" style="width:100%;">
                     <tr>
                       <td width="600" align="center" valign="top">
-                        <a href="{link.cotizacion}">
+                        <a href="{key.quotation}">
                           <img
-                            src="../assets/btn-section-ver-cotizacion.png"
+                            src="https://kaipa.pe/email-assets/btn-section-ver-cotizacion.png"
                             width="310" height="" alt="banner KAiPA"
                             style="display: block; margin:0; padding:0; border:none; width: 100%; max-width: 310px; height: auto; border-radius: 0; background: #fefdfb;"
                             border="0" class="img g-img bg-body">
@@ -658,7 +658,7 @@
                     <tr>
                       <td width="600" align="center" valign="top">
                         <img
-                          src="../assets/title-unete..png"
+                          src="https://kaipa.pe/email-assets/title-unete..png"
                           width="530" height="" alt="Únete a miles de peruanos y transforma tu seguro en un motor de cambio social"
                           style="display: block; margin:0; padding:0; border:none; width: 100%; max-width: 530px; height: auto; border-radius: 0; background: #fefdfb;"
                           border="0" class="img g-img bg-body">
@@ -696,9 +696,9 @@
                   <table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0" style="width:100%;">
                     <tr>
                       <td width="600" align="center" valign="top">
-                        <a href="{link.contacto}">
+                        <a href="{key.contact}">
                           <img
-                            src="../assets/btn-section-contacto.png"
+                            src="https://kaipa.pe/email-assets/btn-section-contacto.png"
                             width="316" height="" alt="banner KAiPA"
                             style="display: block; margin:0; padding:0; border:none; width: 100%; max-width: 316px; height: auto; border-radius: 0; background: #fefdfb;"
                             border="0" class="img g-img bg-body">
@@ -765,21 +765,21 @@
                     <tr>
                       <td width="50%" align="left" valign="bottom" style="width: 50%; display: inline-block; padding: 0;">
                         <a href="https://kaipa.pe/">
-                          <img src="../assets/logo-kaipa.png" width="91" height="" alt="logotipo KAiPA"
+                          <img src="https://kaipa.pe/email-assets/logo-kaipa.png" width="91" height="" alt="logotipo KAiPA"
                             style="display: inline-block; margin: 0; padding:0; border:none; width: 50%; max-width: 91px; height: auto; border-radius: 0; padding: 0;"
                             border="0" class="img g-img">
                         </a>
                       </td>
                       <td width="23" align="right" valign="bottom" style="width: 23px; padding: 0 0 0 20px;">
                         <a href="https://www.tiktok.com/@kaipa.pe/">
-                          <img src="../assets/ico-tiktok.png" width="" height="23" alt="Síguenos en TikTok"
+                          <img src="https://kaipa.pe/email-assets/ico-tiktok.png" width="" height="23" alt="Síguenos en TikTok"
                             style="display: inline-block; margin: 0; padding: 0; border:none; width: auto; height: 23px; border-radius: 0;"
                             border="0" class="img g-img">
                         </a>
                       </td>
                       <td width="23" align="right" valign="bottom" style="width: 23px; padding: 0 0 0 20px;">
                         <a href="https://www.instagram.com/kaipa.pe/">
-                          <img src="../assets/ico-ig.png" width="" height="23" alt="Síguenos en Instagram"
+                          <img src="https://kaipa.pe/email-assets/ico-ig.png" width="" height="23" alt="Síguenos en Instagram"
                             style="display: inline-block; margin: 0; padding: 0; border:none; width: auto; height: 23px; border-radius: 0;"
                             border="0" class="img g-img">
                         </a>
